Fixing horizontal scroll.

--- a/assets/src/scss/mentor/elements/_global.scss
+++ b/assets/src/scss/mentor/elements/_global.scss
@@ -5,6 +5,7 @@ body {
 .wrapper {
   margin-left: auto;
   margin-right: auto;
+  overflow: hidden;
 }
 
 .wrapper--omega {
